# BrSh

./: .env.sample  .gitignore  README.md  db.json  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
content_app/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
content_app/management/commands/: csu.py
content_app/migrations/: 0001_initial.py  0002_lesson.py  0003_alter_module_description.py  0004_alter_module_description_alter_module_name.py  0005_remove_module_description_remove_module_image.py  0006_alter_module_ordering_number.py  0007_remove_module_owner.py  0008_remove_lesson_image_remove_lesson_owner.py  0009_remove_course_created_at_remove_lesson_created_at_and_more.py  0010_step.py  0011_alter_course_options_alter_lesson_options_and_more.py  0012_alter_step_content.py  0013_course_studying_users.py  0014_alter_course_studying_users.py  0015_course_cost.py  0016_step_steps_used_users.py  0017_alter_step_steps_used_users.py  0018_subscription.py  0019_alter_step_steps_used_users.py  0020_alter_subscription_user.py
content_app/templates/: index.html
content_app/templates/content_app/: base.html  course_confirm_delete.html  course_detail.html  (+15 more)
ficstures/: content_app.json  users.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_payment.py  0004_remove_payment_payment_method_alter_payment_summ.py  0005_alter_payment_summ.py  0006_merge_0002_alter_user_phone_0005_alter_payment_summ.py  0007_user_code_confirm.py
(+7 files in other folders)
